--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
 		"symfony/console": "~2.3.11"
 	},
 	"minimum-stability": "dev",
+	"autoload": {
+		"psr-4": {
+			"Wikibase\\DumpReader\\": "src/DumpReader/"
+		}
+	},
 	"extra": {
 		"branch-alias": {
 			"dev-master": "0.1.x-dev"
