Implemented dump walking based on XMLReader

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
          stopOnFailure="false"
          stopOnIncomplete="false"
          stopOnSkipped="false"
-         strict="true"
+         strict="false"
          verbose="true">
     <testsuites>
         <testsuite name="QueryrReplicator">
