--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
 		"wikibase/internal-serialization": "~1.0@dev",
 		"symfony/console": "~2.3.11"
 	},
+	"require-dev": {
+		"phpunit/phpunit": "~4.0.0"
+	},
 	"minimum-stability": "dev",
 	"autoload": {
 		"psr-4": {
