--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	"autoload": {
 		"psr-4": {
 			"Wikibase\\DumpReader\\": "src/DumpReader/",
-			"Queryr\\Replicator\\": "src/Replicator/"
+			"QueryR\\Replicator\\": "src/Replicator/"
 		}
 	},
 	"extra": {
