Centralize knowledge of config file location

--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,11 @@
 	},
 	"bin": [
 		"app/replicator.php"
+	],
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "/home/j/workspace/WikibaseQueryEngine"
+		}
 	]
 }
