--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
 	"repositories": [
 		{
 			"type": "vcs",
-			"url": "/home/j/workspace/WikibaseQueryEngine"
+			"url": "https://github.com/wmde/WikibaseQueryEngine.git"
 		}
 	]
 }
