--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
 		"wikibase/query-engine": "~0.3.0@dev",
 		"wikibase/internal-serialization": "~1.0@dev",
 
+		"jeroen-de-dauw/batching-iterator": "~2.1",
+
 		"symfony/console": "~2.4"
 	},
 	"require-dev": {
