--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
 		"ext-pcntl": "*",
 
 		"queryr/dump-reader": "~0.1.0",
-		"queryr/entity-store": "~0.3.1",
+		"queryr/entity-store": "~0.5.0",
 		"queryr/term-store": "~0.1.0",
 
-		"wikibase/data-model": "~1.0@dev",
+		"wikibase/data-model": "~1.0",
 		"wikibase/query-engine": "~0.3.0",
 		"wikibase/internal-serialization": "~1.1",
 
