--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
 
 		"queryr/dump-reader": "~0.1.0",
 		"queryr/entity-store": "~0.6.0",
-		"queryr/term-store": "~0.1.0",
+		"queryr/term-store": "~0.2.1",
 
 		"wikibase/data-model": "~1.0",
 		"wikibase/query-engine": "~0.3.0",
+		"wikibase/data-model-serialization": "~1.1",
 		"wikibase/internal-serialization": "~1.1",
 
 		"jeroen/batching-iterator": "~2.1",
