--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"jeroen/batching-iterator": "~2.1",
 		"jeroen/json-dump-reader": "~0.1.0",
 
-		"symfony/console": "~2.4"
+		"symfony/console": "~2.4",
+		"monolog/monolog": "~1.11.0"
 	},
 	"require-dev": {
 		"ext-sqlite3": "*",
