--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"queryr/term-store": "~0.2.1",
 
 		"wikibase/data-model": "~2.0",
-		"wikibase/query-engine": "~0.4.0@dev",
+		"wikibase/query-engine": "dev-todo",
 		"wikibase/data-model-serialization": "~1.1",
 		"wikibase/internal-serialization": "~1.1",
 
