--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "queryr/replicator",
+	"description": "CLI application for replicating Wikibase entities",
 	"homepage": "https://github.com/JeroenDeDauw/Replicator",
 	"authors": [
 		{
@@ -32,8 +33,14 @@
 	},
 	"require-dev": {
 		"ext-sqlite3": "*",
+
 		"jeroen/wikibase-data-fixtures": "~1.0",
-		"jeroen/json-dump-data": "~0.1.0"
+		"jeroen/json-dump-data": "~0.1.0",
+
+		"whatthejeff/nyancat-phpunit-resultprinter": "~1.2",
+		"ockcyp/covers-validator": "~0.2.0",
+		"squizlabs/php_codesniffer": "~2.3",
+		"phpmd/phpmd": "~2.3"
 	},
 	"autoload": {
 		"psr-4": {
@@ -47,5 +54,26 @@
 	},
 	"bin": [
 		"replicator"
-	]
+	],
+	"scripts": {
+		"test": [
+			"composer validate --no-interaction",
+			"phpunit",
+			"vendor/bin/covers-validator"
+		],
+		"cs": [
+			"composer phpcs",
+			"composer phpmd"
+		],
+		"ci": [
+			"composer test",
+			"composer cs"
+		],
+		"phpcs": [
+			"vendor/bin/phpcs src/* tests/* --standard=phpcs.xml --extensions=php -sp"
+		],
+		"phpmd": [
+			"vendor/bin/phpmd src/,tests/ text phpmd.xml"
+		]
+	}
 }
