--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	"require": {
 		"php": ">=5.5.0",
 
-		"ext-mysql": "*",
+		"ext-pdo_mysql": "*",
 		"ext-PDO": "*",
 		"ext-pcntl": "*",
 
@@ -32,7 +32,7 @@
 		"monolog/monolog": "~1.11.0"
 	},
 	"require-dev": {
-		"ext-sqlite3": "*",
+		"ext-pdo_sqlite": "*",
 
 		"jeroen/wikibase-data-fixtures": "~1.0",
 		"jeroen/json-dump-data": "~0.1.0",
