Added explicit PHPunit version

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
 		"jeroen/wikibase-data-fixtures": "~1.0",
 		"jeroen/json-dump-data": "~1.0",
 
+		"phpunit/phpunit": "~5.3.0",
 		"whatthejeff/nyancat-phpunit-resultprinter": "~1.2",
 		"ockcyp/covers-validator": "~0.4.0",
 		"squizlabs/php_codesniffer": "~2.3",
@@ -58,15 +59,15 @@
 	"scripts": {
 		"test": [
 			"composer validate --no-interaction",
-			"phpunit",
+			"vendor/bin/phpunit",
 			"vendor/bin/covers-validator"
 		],
 		"cs": [
-			"composer phpcs"
+			"@phpcs"
 		],
 		"ci": [
-			"composer test",
-			"composer cs"
+			"@test",
+			"@cs"
 		],
 		"phpcs": [
 			"vendor/bin/phpcs src/* tests/* --standard=phpcs.xml --extensions=php -sp"
