--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,6 +5,8 @@ before_commands:
   - "composer install --prefer-source"
 
 tools:
+    external_code_coverage:
+        timeout: 900
     php_code_coverage: true
     php_code_sniffer: true
     php_cpd: true
