--- a/composer.json
+++ b/composer.json
@@ -16,25 +16,31 @@
 		"ext-PDO": "*",
 		"ext-pcntl": "*",
 
-		"wikibase/data-model": "~4.0",
-		"wikibase/data-model-serialization": "~2.0",
-		"wikibase/internal-serialization": "~2.0",
+		"wikibase/data-model": "~6.3",
+		"wikibase/data-model-serialization": "~2.3",
+		"wikibase/internal-serialization": "~2.3",
 
-		"queryr/entity-store": "~1.0",
-		"queryr/term-store": "~1.0",
+		"data-values/geo": "^1.2.1",
+		"data-values/number": "^0.8.2",
+		"data-values/time": "^0.8.4",
+
+		"queryr/entity-store": "~1.1",
+		"queryr/term-store": "~1.2",
 		"queryr/xml-dump-reader": "~0.1.1",
 
 		"jeroen/batching-iterator": "~2.1",
 		"jeroen/json-dump-reader": "~1.3",
-		"jeroen/query-engine": "~0.5",
 
 		"symfony/console": "~2.4",
 		"monolog/monolog": "~1.11.0"
 	},
+	"suggest": {
+		"jeroen/query-engine": "~0.5"
+	},
 	"require-dev": {
 		"ext-pdo_sqlite": "*",
 
-		"jeroen/wikibase-data-fixtures": "~1.0",
+		"jeroen/wikibase-data-fixtures": "~1.2",
 		"jeroen/json-dump-data": "~1.0",
 
 		"phpunit/phpunit": "~5.3.0",
