--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"queryr/xml-dump-reader": "~0.1.1",
 
 		"jeroen/batching-iterator": "~2.1",
-		"jeroen/json-dump-reader": "~1.3",
+		"jeroen/json-dump-reader": "~2.0|~1.3",
 
 		"symfony/console": "~2.4",
 		"monolog/monolog": "~1.11.0"
