--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"ext-PDO": "*",
 		"ext-pcntl": "*",
 
-		"wikibase/data-model": "~6.3",
+		"wikibase/data-model": "~8.0|~7.0|~6.3",
 		"wikibase/data-model-serialization": "~2.3",
 		"wikibase/internal-serialization": "~2.3",
 
