--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
 		"wikibase/data-model-serialization": "~2.3",
 		"wikibase/internal-serialization": "~2.3",
 
-		"data-values/geo": "^1.2.1",
-		"data-values/number": "^0.8.2",
-		"data-values/time": "^0.8.4",
+		"data-values/geo": "~4.0|~3.0",
+		"data-values/number": "^0.10.0",
+		"data-values/time": "~1.0",
 
 		"queryr/entity-store": "~1.1",
 		"queryr/term-store": "~1.2",
